# marche

./: .coveragerc  .gitignore  .isort.cfg  .readthedocs.yaml  .travis.yml  LICENSE  Makefile  README  README.rst  appveyor.yml  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup-win-service.py  setup.py
debian/: changelog  control  copyright  lintian-overrides  marche-common.install  marche-defaultconfig.install  marche-gui.install  marche.install  marched.install  rules  source.lintian-overrides
debian/source/: lintian-overrides
devconfig/: entangle.conf  general.conf  nicos.conf  taco.conf
doc/: Makefile  api.rst  auth.rst  conf.py  config.rst  getit.rst  gui.rst  iface.rst  index.rst  intro.rst  jobs.rst  requirements.txt  start.rst
doc/_themes/alabaster/: support.py
doc/_themes/alabaster/static/: alabaster.css_t
doc/iface/: tango.rst  udp.rst  xmlrpc.rst
doc/jobs/: base.rst  entangle.rst  frappy.rst  init.rst  nicos.rst  process.rst  systemd.rst  taco.rst  tangosrv.rst
etc/: cachereg.conf  entangle.conf  frappy.conf  gen.conf  general.conf  general.conf.dist  isc-dhcp-server.conf  marche-gui.desktop  marche.pam  marched  marched.redhat  marched.service  munin-node.conf  mysql.conf  nicos.conf  openbsd-inetd.conf  rpcbind.conf  tango-db.conf
installer/: README  marche-gui-osx.spec  marche-gui.spec
marche/: __init__.py  client.py  colors.py  config.py  console.py  daemon.py  event.py  handler.py  loggers.py  loghandlers.py  permission.py  polling.py  protocol.py  scan.py  utils.py  version.py
marche/auth/: __init__.py  base.py  pam.py  simple.py
marche/gui/: __init__.py  buttons.py  client.py  dialogs.py  hosttree.py  main.py  mainwindow.py  qt.py  res.py  res_qt4.py  res_qt5.py  res_qt6.py  scan.py  standalone.py  subnet.py  util.py
marche/gui/res/: logo-new.icns  march-gui.qrc  marche-gui.qrc  marche.qrc
marche/gui/ui/: authdlg.ui  details.ui  editor.ui  job.ui  main.ui  mainwindow.ui  preferences.ui  scan.ui  selectfiles.ui  subnetinputdlg.ui  text.ui  wait.ui
marche/iface/: __init__.py  base.py  rpc.py  tango.py  udp.py  xmlrpc.py
marche/iface/web/: __init__.py
marche/iface/web/static/: style.css
marche/iface/web/templates/: base.html  help.html  index.html  login.html
marche/jobs/: __init__.py  base.py  entangle.py  frappy.py  init.py  nicos.py  process.py  systemd.py  taco.py  tangosrv.py
pyinstaller/: README  marche-gui.spec
test/: __init__.py  auth.py  config.py  daemon.py  handler.py  iface_rpc.py  iface_udp.py  iface_xmlrpc.py  job.py  job_entangle.py  job_frappy.py  job_init.py  job_nicos.py  job_process.py  job_systemd.py  job_taco.py  job_tangosrv.py  other.py  utils.py
test/conf/: general.conf  job.conf
